--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -33,6 +33,7 @@ body {
   5. Improve text rendering
 */
 body {
+	font-family: sans-serif;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 }
