--- a/src/components/hamburger-nav/hamburgerNav.styles.scss
+++ b/src/components/hamburger-nav/hamburgerNav.styles.scss
@@ -1,13 +1,52 @@
 @use '../../styles/variables';
 
-.hamburger-nav__menu-bg {
-	width: 100%;
-	height: 100%;
+@media screen and (min-width: 900px) {
+	:host {
+		display: none;
+	}
 }
+
+.hamburger-nav__icon-btn {
+	display: block;
+	width: 25px;
+	height: 20px;
+	padding: 0;
+	position: relative;
+	background: transparent;
+	border: none;
+
+	.line {
+		width: 90%;
+		height: 3px;
+		background: variables.$color-grayish-violet;
+
+		&::before, &::after  {
+			content: '';
+			position: absolute;
+			width: 90%;
+			height: 3px;
+			background: variables.$color-grayish-violet;
+		}
+
+		&::before {
+			top: 0;
+			left: 0;
+		}
+
+		&::after {
+			bottom: 0;
+			left: 0;
+		}
+	}
+}
+
 .hamburger-nav__menu {
 	position: absolute;
-	max-width: 100%;
+	// The absolute element has no width
+	width: 90%;
+	max-width: 900px;
 	max-height: 500px;
+	// Hide menu content when the height is 0
 	overflow: hidden;
 	opacity: 1;
 	top: 10%;
