--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $color-primary-cyan: hsl(180, 66%, 49%);
+$color-primary-cyan-transparent: hsla(180, 66%, 49%, 0.5);
 $color-primary-violet: hsl(257, 27%, 26%);
 $color-secondary: hsl(0, 87%, 67%);
 $color-gray: hsl(0, 0%, 75%);
