--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,80 @@ body {
 	align-items: center;
 	padding: 2.5rem 1rem 1rem 1rem;
 }
+
+.main-nav {
+	flex: 1;
+	margin: 0 0 0 1.5rem;
+
+	ul {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		font-weight: bold;
+		list-style: none;
+		padding: 0;
+
+		.main-nav__links, .main-nav__buttons {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		.main-nav__links a:hover {
+			color: #000;
+		}
+
+		.main-nav__signup-button {
+			width: 120px;
+		}
+
+		li {
+			margin-left: 1.5rem;
+			text-align: center;
+
+			a {
+				text-decoration: none;
+				color: variables.$color-gray;
+			}
+
+			button {
+				cursor: pointer;
+			}
+		}
+	}
+}
+
+button {
+	background: none;
+	padding: 0;
+	border: 0;
+	font-size: 1rem;
+	color: variables.$font-color;
+	font-weight: 700;
+}
+
+.btn__login {
+	background: none;
+	padding: 0;
+	border: 0;
+	font-size: 1rem;
+	color: variables.$color-gray;
+	font-weight: 700;
+	font-family: inherit;
+
+	&:hover {
+		color: #000;
+	}
+}
+
+.btn__signup {
+	background: variables.$color-primary-cyan;
+	width: 100%;
+	border-radius: 20px;
+	padding: 0.7rem ;
+
+	&:hover {
+		background: variables.$color-primary-cyan-transparent;
+	}
+}
