--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,22 @@
 @use 'base';
-@use 'variables';
+@use 'variables' as v;
+@use 'theme';
+@use 'mixins' as *;
 
-body {
-	font-size: variables.$font-size;
-	font-family: 'Poppins', sans-serif;
+.site-header, .hero-section__content, .shorten-link-section__content, .statistics-section__content, .footer__content {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.hero-section {
+	padding: 0 v.$spacing-5 0 0;
+}
+
+
+.description {
+	color: v.$color-neutral-violet;
+	font-size: 1rem;
+	margin-bottom: 1rem;
 }
 
 .site-header {
@@ -11,11 +24,18 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	padding: 2.5rem 1rem 1rem 1rem;
+
+	@include on-tablet {
+		& {
+			padding: v.$spacing-5 v.$spacing-0 ;
+		}
+	}
 }
 
 .main-nav {
 	flex: 1;
 	margin: 0 0 0 1.5rem;
+	display: none;
 
 	ul {
 		display: flex;
@@ -46,7 +66,7 @@ body {
 
 			a {
 				text-decoration: none;
-				color: variables.$color-gray;
+				color: v.$color-neutral-gray;
 			}
 
 			button {
@@ -55,14 +75,20 @@ body {
 		}
 	}
 }
+@media screen and (min-width: 900px) {
+	.main-nav {
+		display: block;
+	}
+}
 
 button {
 	background: none;
 	padding: 0;
 	border: 0;
 	font-size: 1rem;
-	color: variables.$font-color;
+	color: v.$font-color;
 	font-weight: 700;
+	cursor: pointer;
 }
 
 .btn__login {
@@ -70,7 +96,7 @@ button {
 	padding: 0;
 	border: 0;
 	font-size: 1rem;
-	color: variables.$color-gray;
+	color: v.$color-neutral-gray;
 	font-weight: 700;
 	font-family: inherit;
 
@@ -80,12 +106,64 @@ button {
 }
 
 .btn__signup {
-	background: variables.$color-primary-cyan;
+	background: v.$color-primary;
 	width: 100%;
 	border-radius: 20px;
 	padding: 0.7rem ;
 
 	&:hover {
-		background: variables.$color-primary-cyan-transparent;
+		background: v.$color-primary-hover;
 	}
 }
+
+.hero-section {
+	.hero-section__text {
+		padding: v.$spacing-padding;
+		text-align: center;
+
+		.hero-section__title {
+			font-size: v.$font-size-2;
+			font-weight: v.$font-weight-bold;
+		}
+
+		.hero-section__description {
+			margin: 0 0 v.$spacing-5 0;
+		}
+
+		.hero-section__btn {
+			width: 50%;
+			color: #fff;
+		}
+
+	}
+	.hero-section__image {
+		padding: v.$spacing-padding 0 0 0;
+		overflow: hidden;
+
+		img {
+			max-width: 135%;
+		}
+	}
+
+	@include on-tablet {
+		.hero-section__content {
+			display: flex;
+			flex-flow: row-reverse nowrap;
+
+			.hero-section__text {
+				max-width: 500px;
+				text-align: left;
+
+				.hero-section__title {
+					font-size: 2rem;
+				}
+
+			}
+			.hero-section__image {
+				flex: 1;
+			}
+		}
+	}
+}
+
+
