--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,16 +11,21 @@ $breakpoint-desktop: 1440px;
 // Colors
 //==============================================================================
 
+// START Edit your color palette here :
 $color-primary: hsl(180, 66%, 49%);
 $color-primary-dark: hsl(257, 27%, 26%);
 $color-primary-hover: hsla(180, 66%, 49%, 0.5);
 
 $color-secondary: hsl(0, 87%, 67%);
 
-$color-neutral-gray: hsl(0, 0%, 75%);
-$color-neutral-violet: hsl(257, 7%, 63%);
-$color-neutral-blue-dark: hsl(255, 11%, 22%);
-$color-neutral-violet-dark: hsl(260, 8%, 14%);
+$color-neutral-gray-light: hsl(0, 0%, 75%);
+$color-neutral-gray-dark: hsl(257, 7%, 63%);
+$color-neutral-black-light: hsl(255, 11%, 22%);
+$color-neutral-black-dark: hsl(260, 8%, 14%);
+
+$color-additional-violet: #4b406b;
+
+// END color palette
 
 $color-separator: hsla(0, 0%, 75%, 0.25);
 $color-background: white;
@@ -63,3 +68,7 @@ $spacing-margin: $spacing-5;
 
 $spacing-padding-container: $spacing-padding;
 
+//==============================================================================
+// Border
+//==============================================================================
+$border-radius: 7px
