--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -45,3 +45,7 @@ small, .text_small {font-size: $font-size-7;}
 //.container {
 //  padding: 0 $spacing-padding-container;
 //}
+
+ul {
+  list-style: none;
+}
