--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,6 +25,8 @@ $color-neutral-black-dark: hsl(260, 8%, 14%);
 
 $color-additional-violet: #4b406b;
 
+$color-error: hsl(0, 87%, 67%);
+
 // END color palette
 
 $color-separator: hsla(0, 0%, 75%, 0.25);
